...
    <string name="location_fix_obtained">Location fix obtained</string>
    <string name="trip_summary_image_description">Trip map or default image</string>
    <string name="trip_title_placeholder">Trip Title</string>
    <string name="time_placeholder">HH:mm</string>
    <string name="time_ago_placeholder">XX days ago</string>
    <string name="cyclotrack_summary_map_id">c2e079ebb492f6ef</string>
    <string name="start_label">START</string>
    <string name="pause_label">PAUSE</string>
    <string name="stop_label">STOP</string>
    <string name="resume_label">RESUME</string>
    <string name="label_placeholder">LABEL</string>
    <string name="start_dashboard_button_description">Touch this button to enter dashboard</string>
    <string name="action_cleanup">Cleanup</string>
...
    <string name="useGoogleFitBiometricsDialog_title">Use Google Fit Biometrics</string>
    <string name="useGoogleFitBiometricsDialog_message">Enable this option to read height, weight, and resting heart rate data from Google Fit. If this option is disabled, the values stored in Cyclotrack will be used. Update this option at any time in biometrics settings.</string>
    <string name="preference_key_useAutoCircumference">useAutoCircumference</string>
    <string name="preference_key_bike_specs">preference_key_bike_specs</string>
    <string name="switch_preference_useAutoCircumference_description">Let Cyclotrack use GPS to calibrate circumference</string>
    <string name="preference_key_bike_mass">bike_mass</string>
    <string name="preferences_key_enable_analytics">preference_key_enable_analytics</string>
    <string name="preference_key_analytics_opt_in_presented">preference_key_analytics_opt_in_presented</string>
    <string name="preferences_display_app_version">preference_key_display_app_version</string>
    <string name="preference_key_advanced_preferences">preference_key_advanced_preferences</string>
    <string name="preferences_key_advanced_onboard_sensors">preferences_key_onboard_sensors</string>
    <string name="preferences_key_advanced_enable_google_fit_sync_biometrics">enable_gfit_sync_biometrics</string>
    <string name="preference_key_advanced_export_sensors_log">preference_key_advanced_export_sensors_log</string>
    <string name="preferences_key_advanced_enable_google_fit_resting_heart_rate">enable_google_fit_resting_heart_rate</string>
...
    <string name="preference_key_strava_access_expires_at">strava_access_expires_at</string>
    <string name="preference_key_strava_access_token">strava_access_token</string>
    <string name="remove_cyclotrack_data_from_google_fit_message">Remove Cyclotrack data from Google Fit</string>
    <string name="remove_cyclotrack_data_from_strava_message">Remove Cyclotrack data from Strava</string>
    <string name="preference_key_strava_next_sync_window">preference_key_strava_next_sync_window</string>
    <string name="preference_key_autopause_preferences">preference_key_autopause</string>
    <string name="preference_key_autopause_enable">preferences_key_autopause_enable</string>
    <string name="preference_key_autopause_pause_threshold">preference_key_autopause_pause_threshold</string>
    <string name="preference_key_autopause_resume_threshold">preference_key_autopause_resume_threshold</string>
    <string name="preference_key_autopause_speed_threshold">preference_key_autopause_speed_threshold</string>
    <string name="preference_key_autopause_manual_override">preferences_key_autopause_manual_override</string>
    <string name="seekbar_preference_autopause_pauseThreshold_title">Pause threshold</string>
    <string name="seekbar_preference_autopause_pauseThreshold_description">
...
    <string name="switch_preference_autopause_enable_description">Automatically pause and resume rides when not moving.</string>
    <string name="switch_preference_autopause_resume_lockout_title">Auto-pause resume lockout</string>
    <string name="switch_preference_autopause_resume_lockout_description">
        When you press the pause button, the ride will not be resumed until you press resume.
    </string>
    <string name="autopause_label">AUTO-PAUSE</string>
    <string name="preference_key_user_current_version">preference_key_user_current_version</string>
    <string name="whats_new_message">
    \n\n&#8226; Search rides: now you can search through your ride history by date, distance, and other keywords!
    \n\n&#8226; Increased visibility when burn-in reduction enabled.
    </string>
    <string name="preferences_dashboard_safe_zone_top_margin">preference_dashboard_safe_zone_top_margin</string>
    <string name="preferences_dashboard_safe_zone_bottom_margin">preference_dashboard_safe_zone_bottom_margin</string>
    <string name="preference_key_dashboard_safe_zone">preference_key_dashboard_safe_zone</string>
    <string name="preference_title_dashboard_safe_zone">Resize dashboard</string>
    <string name="preference_title_dashboard_safe_zone_summary">Ensure that your phone mount does not block information while you ride.</string>
    <string name="preferences_dashboard_safe_zone_left_margin">preferences_dashboard_safe_zone_left_margin</string>
    <string name="preferences_dashboard_safe_zone_right_margin">preferences_dashboard_safe_zone_right_margin</string>
    <string name="preference_key_burn_in_reduction">preference_burn_in_reduction</string>
    <string name="empty_search_result_message">Sorry, couldn\'t find anything...</string>
</resources>

